# UA

./: .gitignore  NOTAS.ods
1ano/1 semestre/FP/Exercicios/: Exercicios.txt
1ano/1 semestre/FP/Trabalhos/: Trabalho1.py
1ano/2 semestre/LSD/3 teste/: Waveform.vwf  teste.qpf  teste.qsf  teste.qws  teste.vhd  teste.vhd.bak
1ano/2 semestre/LSD/Miniprojeto/: Bin7SegDecoder.vhd  ContadorDemo.qpf  ContadorDemo.qsf.bak  ContadorDemo.qws  ContadorDemo.vhd  CounterUp4.vhd  CounterUp4.vhd.bak  DFlipFlop.vhd  DFlipFlop.vhd.bak  DebounceUnit.vhd.bak  TimerN.vhd  Waveform.vwf
1ano/2 semestre/LSD/Miniprojeto_2022/: Bin7SegDecoder.vhd  FreqDivider.vhd  MiniProjeto_Demo.qpf  MiniProjeto_Demo.qsf.bak  MiniProjeto_Demo.qws  MiniProjeto_Demo.vhd  MiniProjeto_Demo.vhd.bak  TimerN.vhd  Waveform.vwf  selecter.vhd  selecter.vhd.bak  speedselecter.vhd  speedselecter.vhd.bak
1ano/2 semestre/LSD/Testes/: CntSpecial.vhd  CntSpecial.vhd.bak  TestesDemo.qpf  TestesDemo.qsf  TestesDemo.qws  Waveform.vwf
2ano/: NOTAS_2ANO_SEMESTRE1.ods
2ano/1semestre/: NOTAS_2ANO_SEMESTRE1.xlsx
2ano/1semestre/AC1/: exceptions.s  random.asm
3ano/1semestre/IA/: log.txt  read_log.py
3ano/PECI/: config_Router.txt  findings
3ano/PECI/EntregaPECI/: README.md
3ano/PECI/Wifi-Speed-Test/: reciver.py  sender.py
4ano/1semestre/AAD/: todo.md
4ano/1semestre/IC/P/Trabalho1/bit_stream/src/: .bin2text.cpp.swp  CMakeLists.txt  Makefile  bin2text.cpp  bit_stream.cpp  bit_stream.h  byte_stream.cpp  byte_stream.h  mono_dct_dec.cpp  mono_dct_enc.cpp  text2bin.cpp  wav_quant_dec.cpp  wav_quant_enc.cpp
(+5576 files in other folders)
